[package]
name = "mad-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
members = ["driver/mmo7"]

[dependencies]
webrender = { git = "https://github.com/servo/webrender" }
glutin = "0.28.0"
gleam = "0.13.1"
winit = "0.26.1"
window-vibrancy = "0.1.3"
image = "0.24.2"

util = { path = "./util" }

tokio = { version = "1.19.2", features = ["full"] }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
hashbrown = "0.12.1"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Mad Rust"