[package]
name = "mad-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
webrender = { git = "https://github.com/servo/webrender" }
glutin = "0.29.1"
gleam = "0.13.1"
winit = "0.27.5"
window-vibrancy = "0.3.2"
image = "0.24.5"
copypasta = "0.8.1"
sudo = "0.6.0"

util = { git = "https://github.com/Aytixel/mad-rust-util", package = "mad-rust-util" }

tokio = { version = "1.24.2", features = ["full"] }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
hashbrown = "0.13.1"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Mad Rust"