[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bincode = "1.3.3"
dirs = "4.0.0"
notify = "4.0.17"